created jquery, and css file. creaated a loop to loop throught the array, used an alert box to call out the name of who to choose, created a button to allow user to click when they are ready to choose or when they are done choosing. created the randomNumber function to shuffle the array to produce random name in my alert box. created a userClick to be able to click on the picture and compare it to the random array the was picked to see if it was true. Made an if else statement to confirm that the picture is truely equal or not.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
     <head>
         <meta charset="utf-8">
         <title>Guess Who?</title>
+        <link rel="stylesheet" type="" href="style.css">
+        <script src="jQuery-3.6.0.min.js"></script>
         <script src="data.js"></script>
         <script src="client.js"></script>
     </head>
     <body>
-        
+            <h1>Guess Who???</h1>
+            <div class="box"></div>
     </body>
 </html>
